# chronolink-backend/routes/api.php
@@ -2,6 +2,7 @@
 
 use App\Http\Controllers\AuthController;
 use App\Http\Controllers\EventController;
+use App\Http\Controllers\LabelController;
 use App\Http\Controllers\PermissionController;
 use App\Http\Controllers\TimelineController;
 use App\Http\Controllers\UserController;
@@ -22,7 +23,15 @@ Route::group(['middleware' => 'auth:api'], function () {
     Route::PUT('update-timeline/{timeline}', [TimelineController::class, 'update']);
     Route::DELETE('delete-timeline/{timeline}', [TimelineController::class, 'destroy']);
     Route::POST('assign-user/{timeline}', [TimelineController::class, 'assignUser']);
-    Route::GET('timeline/{timeline}', [TimelineController::class, 'show']);
+    Route::GET('timelines/{timeline}', [TimelineController::class, 'show']);
+    Route::GET('events/{timeline}', [EventController::class, 'index']);
+});
+
+Route::group(['middleware' => 'auth:api'], function () {
+    Route::GET('labels/{timeline}', [LabelController::class, 'index']);
+    Route::POST('create-label', [LabelController::class, 'store']);
+    Route::PUT('update-label/{label}', [LabelController::class, 'update']);
+    Route::DELETE('delete-label/{label}', [LabelController::class, 'destroy']);
 });
 
 Route::group(['middleware' => 'auth:api'], function () {
@@ -38,5 +47,5 @@ Route::group(['middleware' => 'auth:api'], function () {
     Route::POST('create-event', [EventController::class, 'store']);
     Route::PUT('update-event/{event}', [EventController::class, 'update']);
     Route::DELETE('delete-event/{event}', [EventController::class, 'destroy']);
-    // Route::GET('event/{event}', [EventController::class, 'show']);
+    Route::GET('event/{event}', [EventController::class, 'show']);
 });
